Fix archive page linking problem: - When you click a tag link, the page will scroll until the target is hidden by the header. Add some css to correct

--- a/assets/css/3-layouts/_post-archive.sass
+++ b/assets/css/3-layouts/_post-archive.sass
@@ -15,6 +15,8 @@
 
   .post-title
     text-transform: capitalize
+    padding-top: $header-height
+    margin-top: -$header-height
 
 .tag-cloud-list
   list-style-type: none
