--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1226,7 +1226,9 @@ section.posts .post-excerpt {
   .archive-wrap .post-list {
     margin-top: 15px; }
   .archive-wrap .post-title {
-    text-transform: capitalize; }
+    text-transform: capitalize;
+    padding-top: 75px;
+    margin-top: -75px; }
 
 .tag-cloud-list {
   list-style-type: none; }
